fix: list items overlapping
list items need to remove the display: relative
property not overlap the map.

--- a/css/styles.css
+++ b/css/styles.css
@@ -277,7 +277,6 @@ nav h1 a {
   margin: 0 0 30px;
   overflow: hidden;
   padding: 0 20px 20px;
-  position: relative;
   width: 85%;
 }
 #reviews-list li p {
